Commit19 - Mejora de novedades + imagen de fondo.