@@ -65,8 +65,7 @@ public class PeliculaService {
 
             //si hay varios resultados se coge el primero
             if(respuesta != null && respuesta.getResults() != null && !respuesta.getResults().isEmpty()){
-                Long idTmdb= respuesta.getResults().getFirst().getIdTmdb();
-
+                Long idTmdb= respuesta.getResults().get(0).getIdTmdb(); // He cambiado .getFirst() por .get(0) por compatibilidad, es lo mismo
 
                 //buscar el video del trailer con el id
                 String idTrailer = tmdbService.obtenerTrailer(idTmdb, "movie");
@@ -97,6 +96,14 @@ public class PeliculaService {
                         pelicula.setRutaCaratula(urlImagenCompleta);
                     }
 
+                    // --- NUEVO: guardar el fondo horizontal para el hero slider ---
+                    if(datos.getRutaFondo() != null){
+                        // usamos "original" para que se vea hd
+                        String urlFondoCompleta = "https://image.tmdb.org/t/p/original" + datos.getRutaFondo();
+                        pelicula.setRutaFondo(urlFondoCompleta);
+                    }
+                    // -------------------------------------------------------------
+
                     //sacar el genero
                     if (datos.getGenres() != null){
                         String generosTexto = datos.getGenres().stream().map(DetallesTMDB.Genero::getName).collect(Collectors.joining(", "));
@@ -123,6 +130,5 @@ public class PeliculaService {
 
         //gardarlo en la db
         return contenidoRepository.save(pelicula);
-
     }
 }
